--- a/HTML5 and CSS Fundamentals/new.html
+++ b/HTML5 and CSS Fundamentals/new.html
@@ -8,6 +8,16 @@
 
   <body>
     Hello HTML!
+    <p>
+      &lt;h1&gt;This is a heading &amp; it is the &quot;biggest&quot; one in
+      this page&gt;/h1&lt;
+    </p>
+    <p><blockquote>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</blockquote></p>
+    <!-- If this line were in your code, would you see it on your Web page? -->
+    <P>This is my Paragraph</P>
+    <p>         This is my paragraph </p>
+    <p>This is my Paragraph</p>
+    <p>This     is     my     Paragraph </p>
     <h1>Hello</h1>
     <img src="https:" alt="Floating Flower" />
     <!-- 
