--- a/HTML5 and CSS Fundamentals/new.html
+++ b/HTML5 and CSS Fundamentals/new.html
@@ -14,6 +14,8 @@
     </p>
     <p><blockquote>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</blockquote></p>
     <!-- If this line were in your code, would you see it on your Web page? -->
+    <p>Hi everyone! My name is Alexa and I work for <span class="company">ABC Company</span></p>
+    <p>Hi everyone! My name is Alexa and I work for <div class="company1">ABC Company</div></p>
     <P>This is my Paragraph</P>
     <p>         This is my paragraph </p>
     <p>This is my Paragraph</p>
